--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
     $header-h: 203.5px;
     background: $white;
-    z-index: 10;
+    z-index: 11;
     transition: .25s;
     
     .header-menu {
