--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,10 +1,27 @@
 .main {
     position: relative;
     width: 100%;
-    // height: 100%;
     z-index: 9999;
     background-color: $white;
     overflow-x: hidden;
+    transition: all 0.5s;
+    left: 0;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 0;
+        height: 0;
+        background: rgba(0, 0, 0, 0.4);
+        z-index: 10;
+        opacity: 0;
+        transition:
+            opacity 0.5s,
+            width 0.1s 0.5s,
+            height 0.1s 0.5s;
+    }
+
     &.opened {
         left: -275px;
         overflow-y: scroll;
@@ -14,12 +31,21 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0,0,0,.4);
+            background: rgba(0, 0, 0, 0.4);
             z-index: 10;
+            opacity: 1;
+            transition: opacity 0.5s;
         }
 
-        @include mq('lg') {
+        @include mq("lg") {
             left: -350px;
         }
+    }
+}
+
+@-moz-document url-prefix() {
+    #container > .main,
+    .sticky {
+        transition: none;
     }
 }
